cambio de rutas y estilo movil

--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
 
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
 
-                        <a class="nav-link" href="/secciones/sobre-mi.html">Sobre Mi</a>
+                        <a class="nav-link" href="./secciones/sobre-mi.html">Sobre Mi</a>
 
-                        <a class="nav-link" href="/secciones/servicios.html">Servicios</a>
+                        <a class="nav-link" href="./secciones/servicios.html">Servicios</a>
                         
-                        <a class="nav-link" href="/secciones/receta.html">Receta</a>
+                        <a class="nav-link" href="./secciones/servicios.html">Receta</a>
                     </div>
                 </div>
             </div>
