--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -26,13 +26,13 @@
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
 
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
 
-                        <a class="nav-link" href="/secciones/sobre-mi.html">Sobre Mi</a>
+                        <a class="nav-link" href="sobre-mi.html">Sobre Mi</a>
 
-                        <a class="nav-link" href="/secciones/servicios.html">Servicios</a>
+                        <a class="nav-link" href="servicios.html">Servicios</a>
                         
-                        <a class="nav-link" href="/secciones/receta.html">Receta</a>
+                        <a class="nav-link" href="receta.html">Receta</a>
                     </div>
                 </div>
             </div>
