cambio de rutas img

--- a/secciones/receta.html
+++ b/secciones/receta.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- estilos de css -->
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 
     <!-- estilos de letras -->
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Momo+Signature&display=swap" rel="stylesheet">
@@ -51,7 +51,7 @@
 
         <h1>Recetas</h1>
         <h3>Galletas de jengibre sin azúcar</h3>
-        <img src="/img/receta-1.jpg" alt="galletitas">
+        <img src="../img/receta-1.jpg" alt="galletitas">
         <h4>Ingredientes</h4>
         <p>Para elaborar 20-25 galletas de jengibre se necesita:</p>
         <ul>
@@ -88,15 +88,15 @@
 
         <div class="redes">
             <a href="https://www.instagram.com/nutri.ceciliasalva/">
-                <img src="/img/Instagram_icon.png.webp" alt="instagram">
+                <img src="../img/Instagram_icon.png.webp" alt="instagram">
             </a>
 
             <a href="https://www.tiktok.com/@nutri.ceciliasalva">
-                <img src="/img/tik-tok8.png" alt="tik-tok">
+                <img src="../img/tik-tok8.png" alt="tik-tok">
             </a>
 
             <a href="https://wa.me/603943487">
-                <img src="/img/whatsapp-icon-free-png.webp" alt="whatsapp">
+                <img src="../img/whatsapp-icon-free-png.webp" alt="whatsapp">
             </a>
         </div>
 
