--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -47,10 +47,10 @@
         <h1>Planes Nutricionales</h1>
 
         <div class="galeria">
-            <img src="/img/plan-1.webp" alt="">
-            <img src="/img/plan-2.webp" alt="">
-            <img src="/img/plan-3.webp" alt="">
-            <img src="/img/plan-4.webp" alt="">
+            <img src="../img/plan-1.webp" alt="plan1">
+            <img src="../img/plan-2.webp" alt="plan2">
+            <img src="../img/plan-3.webp" alt="plan3">
+            <img src="../img/plan-4.webp" alt="plan4">
         </div>
         
     </main>
@@ -60,15 +60,15 @@
 
         <div class="redes">
             <a href="https://www.instagram.com/nutri.ceciliasalva/">
-                <img src="/img/Instagram_icon.png.webp" alt="instagram">
+                <img src="../img/Instagram_icon.png.webp" alt="instagram">
             </a>
 
             <a href="https://www.tiktok.com/@nutri.ceciliasalva">
-                <img src="/img/tik-tok8.png" alt="tik-tok">
+                <img src="../img/tik-tok8.png" alt="tik-tok">
             </a>
 
             <a href="https://wa.me/603943487">
-                <img src="/img/whatsapp-icon-free-png.webp" alt="whatsapp">
+                <img src="../img/whatsapp-icon-free-png.webp" alt="whatsapp">
             </a>
         </div>
         
