--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -26,17 +26,12 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
-
+                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
                         <a class="nav-link" href="sobre-mi.html">Sobre Mi</a>
-
                         <a class="nav-link" href="servicios.html">Servicios</a>
-                        
-                        <a class="nav-link" href="receta.html">Receta</a>
+                        <a class="nav-link" href="contacto.html">Contacto</a>
                     </div>
                 </div>
             </div>
@@ -45,11 +40,30 @@
 
 <!-- contenido principal -->
     <main>
-        <h1>Historia Profesional</h1>
-        <p>Soy Cecilia Salva, Licenciada en Nutrición de la Universidad de Buenos Aires, ex Jefe de Residentes del Hospital de Clínicas de la misma Universidad, especialista en Medicina Basada en la Evidencia y Revisiones Sistemáticas y Meta-análisis. Dentro de la residencia me especialice en paciente Oncológico (Memorial Sloan Kettering Cancer Center, NY, USA) y soporte nutricional, actividad que realice durante 7 años en el ámbito privado. Desde siempre entendí que la alimentación va mucho más allá de los nutrientes: está profundamente conectada con nuestras emociones, hábitos y vínculos. Por eso, acompaño a quienes desean nutrirse de forma consciente, real y sin restricciones, priorizando su bienestar emocional y físico.</p>
-        <p>Mi actividad docente en la actualidad es en escuelas e instituciones, y ha sido en sus inicios como ayudante de cátedra en Fisiopatología y Dietoterapia del Adulto, en la Universidad de Buenos Aires. Siempre me gusto la educación, ya que estoy convencida que la misma implica una concientización cultural y conductal, por eso es que, luego de haber sido madre, enfoqué mi campo en un principio en la escuela de mis hijos, en las instituciones deportivas a las cúales pertencieron y luego en otras instituciones.</p>
-        <p>Mi propósito es claro: enseñar a nutrirse sin castigos ni restricciones, incorporando lo bueno sin eliminar el disfrute, y recordando que el camino hacia una alimentación saludable comienza por el autoconocimiento y la empatía con uno mismo.</p>
-        <p>Hoy, además de atender en consultorio y brindar asesoramientos personalizados, acompaño procesos de transformación a través de contenidos educativos, clases y artículos que promueven una nutrición accesible, realista y sostenible.</p>
+        <h2>Mi Historia Personal</h2>
+        <section class="section-uno">
+            <div class="contenedor">
+                <img src="" alt="">
+                <div class="texto">
+                    <p>Desde siempre he sentido una gran pasión por la nutrición. Mi principal motivación ha sido ayudar a las personas a mejorar su salud y su calidad de vida, sin renunciar al placer de comer.</p>
+                    <p>Inicié mi camino formándome como Técnico en Dietética en Barcelona. Durante esos estudios descubrí que la nutrición no solo me gustaba: me apasionaba. Sentía que quería profundizar mucho más, así que decidí continuar mi formación cursando el Grado en Nutrición Humana y Dietética en la Universidad de Barcelona. Mientras estudiaba la carrera, trabajé durante más de tres años como dietista en un hospital de Barcelona, lo que me permitió aplicar mis conocimientos en un entorno clínico real y adquirir una valiosa experiencia profesional.</p>
+                    <p>Al finalizar la carrera, realicé un Máster en Nutrición Clínica con el objetivo de especializarme en el tratamiento de enfermedades en las que la alimentación desempeña un papel fundamental para mejorar la salud y calidad de vida del paciente.</p>
+                    <p>Mi interés por los Trastornos de la Conducta Alimentaria (TCA) surgió de una experiencia personal: conocí a una chica que sufría bulimia, con episodios de atracones y vómitos. A pesar de ayudarla desde la distancia, me di cuenta de que había muchos aspectos que desconocía. Esa experiencia fue el motor que me impulsó a formarme específicamente en TCA.</p>
+                    <p>A raíz de esa formación, comencé a colaborar con centros psicológicos, apoyando a personas con este tipo de trastornos. Fue entonces cuando descubrí algo clave: en muchas mujeres, los TCA conllevaban desequilibrios hormonales importantes, como la amenorrea hipotalámica. Este hallazgo despertó mi interés por la salud hormonal de la mujer y decidí especializarme en ello.</p>
+                </div>
+            </div>
+        </section>
+        
+        <section class="section-dos">
+            <div class="contendero-dos">
+                <div class="texto">
+                    <p>De forma paralela, trabajo en proyectos educativos enfocados en fomentar hábitos de vida saludables entre la población infantil. Siempre he sentido un gran interés por la prevención, incluso más que por la curación, y poder enseñar a niños y niñas a cuidar de su salud desde pequeños es algo que me apasiona profundamente.</p>
+                    <p>Hoy en día, acompaño a niños, niñas y adolescentes con problemas en la relación con la comida, a mujeres con alteraciones hormonales, y a personas que presentan trastornos digestivos o metabólicos. Mi enfoque es integral, humano y personalizado, siempre con el objetivo de mejorar su bienestar físico y emocional a través de la nutrición.</p>
+                    <p>Para mí, la nutrición no es solo comer bien: es un estilo de vida, un placer, una forma de vivir y de sentir. Por eso, creo firmemente en la importancia de escuchar y respetar nuestras señales internas, y en nutrirnos desde el respeto hacia nuestro cuerpo.</p>
+                </div>
+                <img src="" alt="">
+            </div>
+        </section>
 
     </main>
 
