--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -69,7 +69,7 @@
                 </form>
             </div>
             <div class="contacto-imagen">
-                <img src="" alt="">
+                <img src="../img/imagen-ceci2.jpg" alt="img-ceci-2">
             </div>
         </div>
     </main>
