--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 <!-- encabezado principal -->
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light fixed-top">
-            <div class="container">
-                <a href="index.html">
-                    <img src="" alt="">
+        <nav class="navbar navbar-expand-lg bg-light px-4">
+            <div class="container justify-content-end">
+                <a class="navbar-brand" href="index.html">
+                    <img src="img/logo-iris.avif" alt="logo-iris" height="70">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegacion">
@@ -36,13 +36,13 @@
                     <ul class="navbar-nav align-items-lg-center">
                         
                         <li class="nav-item">
-                            <a class="nav-link" href="./secciones/sobre-mi.html">Sobre mi</a>
+                            <a class="nav-link menu-link" href="./secciones/sobre-mi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./secciones/servicios.html">Servicios</a>
+                            <a class="nav-link menu-link" href="./secciones/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./secciones/contacto.html">Contacto</a>
+                            <a class="nav-link menu-link" href="./secciones/contacto.html">Contacto</a>
                         </li>
 
                     </ul>
@@ -75,7 +75,7 @@
 
 <!-- informacion metodo de trabajo -->
         <div>
-            <h3>Método de trabajo</h3>
+            <h2>Método de trabajo</h2>
             <ul>
                 <li>Trabajamos en formato online para que puedas cuidarte desde cualquier lugar.</li>
                 <li>Para nosotros lo más importante es el paciente, tu historia, tus emociones y tus necesidades.</li>
