agregando estilos a contacto

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -53,7 +53,7 @@
                     <label>Correo electronico del paciente</label>
                     <input type="email" placeholder="Escribe tu correo aqui">
 
-                    <label">Telefono de contacto</label>
+                    <label>Telefono de contacto</label>
                     <input type="tel" placeholder="Escribe tu telefono de contacto aqui">
 
                     <label>Tipo de visita</label>
@@ -69,7 +69,7 @@
                 </form>
             </div>
             <div class="contacto-imagen">
-                <img src="../img/imagen-ceci2.jpg" alt="img-ceci-2">
+                <img src="../img/imagen-contacto.webp" alt="img-ceci-2">
             </div>
         </div>
     </main>
