modificando el header

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     <ul class="navbar-nav align-items-lg-center">
                         
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="./secciones/sobre-mi.html">Sobre mi</a>
+                            <a class="nav-link menu-link" href="secciones/sobre-mi.html">Sobre mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="./secciones/servicios.html">Servicios</a>
+                            <a class="nav-link menu-link" href="secciones/servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="./secciones/contacto.html">Contacto</a>
+                            <a class="nav-link menu-link" href="secciones/contacto.html">Contacto</a>
                         </li>
 
                     </ul>
@@ -90,7 +90,6 @@
 
 <!-- tarjeta -->
         <div class="cards-container">
-
             <div class="card">
                 <h3>Trastornos de la Conducta Alimentaria (TCA)</h3>
                 <p>Terapia nutricional para la recuperación de los TCA, desde un enfoque no peso centrista, no basado en dietas y reconcentrando con las señales del cuerpo de una manera respetuosa.</p>
