--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -19,24 +19,30 @@
 <body>
     <!-- encabezado principal-->
     <header>
-        <nav class="navbar navbar-expand-lg ">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg bg-light px-4">
+            <div class="container justify-content-end">
+                <a class="navbar-brand" href="../index.html">
+                    <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegacion">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
-                        <a class="nav-link" href="sobre-mi.html">Sobre Mi</a>
-                        <a class="nav-link" href="servicios.html">Servicios</a>
-                        <a class="nav-link" href="contacto.html">Contacto</a>
-                    </div>
+                <div class="collapse navbar-collapse justify-content-end" id="mainNav">
+                    <ul class="navbar-nav align-items-lg-center">
+                        
+                        <li class="nav-item">
+                            <a class="nav-link menu-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menu-link" href="sobre-mi.html">Sobre mi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menu-link" href="servicios.html">Servicios</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
-
-
-
     </header>
 
 
