--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -52,7 +52,7 @@
         <h2>Mi Historia Personal</h2>
         <section class="section-uno">
             <div class="contenedor-uno">
-                <img src="../img/imagen-ceci2.jpg" alt="img-ceci-2">
+                <img src="../img/imagen-ceci1.jpg" alt="img-ceci-2">
                 <div class="texto">
                     <p>Desde siempre he sentido una gran pasión por la nutrición. Mi principal motivación ha sido ayudar a las personas a mejorar su salud y su calidad de vida, sin renunciar al placer de comer.</p>
                     <p>Inicié mi camino formándome como Técnico en Dietética en Barcelona. Durante esos estudios descubrí que la nutrición no solo me gustaba: me apasionaba. Sentía que quería profundizar mucho más, así que decidí continuar mi formación cursando el Grado en Nutrición Humana y Dietética en la Universidad de Barcelona. Mientras estudiaba la carrera, trabajé durante más de tres años como dietista en un hospital de Barcelona, lo que me permitió aplicar mis conocimientos en un entorno clínico real y adquirir una valiosa experiencia profesional.</p>
@@ -64,13 +64,14 @@
         </section>
         
         <section class="section-dos">
-            <div class="contendero-dos">
-                <div class="texto">
+            <div class="contenedor-dos">
+                <img src="../img/imagen-ceci2.jpg" alt="img-ceci-1">
+                <div class="texto-dos">
                     <p>De forma paralela, trabajo en proyectos educativos enfocados en fomentar hábitos de vida saludables entre la población infantil. Siempre he sentido un gran interés por la prevención, incluso más que por la curación, y poder enseñar a niños y niñas a cuidar de su salud desde pequeños es algo que me apasiona profundamente.</p>
                     <p>Hoy en día, acompaño a niños, niñas y adolescentes con problemas en la relación con la comida, a mujeres con alteraciones hormonales, y a personas que presentan trastornos digestivos o metabólicos. Mi enfoque es integral, humano y personalizado, siempre con el objetivo de mejorar su bienestar físico y emocional a través de la nutrición.</p>
                     <p>Para mí, la nutrición no es solo comer bien: es un estilo de vida, un placer, una forma de vivir y de sentir. Por eso, creo firmemente en la importancia de escuchar y respetar nuestras señales internas, y en nutrirnos desde el respeto hacia nuestro cuerpo.</p>
                 </div>
-                <img src="../img/imagen-ceci1.jpg" alt="img-ceci-1">
+                
             </div>
         </section>
 
