arreglando el header

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- link de boostrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8         +LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- estilos css -->
     <link rel="stylesheet" href="css/estilos.css">
@@ -25,38 +25,33 @@
         <nav class="navbar navbar-expand-lg bg-light px-4">
             <div class="container justify-content-end">
                 <a class="navbar-brand" href="index.html">
-                    <img src="img/logo-iris.avif" alt="logo-iris" height="70">
+                    <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
                 </a>
-
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegacion">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-
                 <div class="collapse navbar-collapse justify-content-end" id="mainNav">
                     <ul class="navbar-nav align-items-lg-center">
                         
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="secciones/sobre-mi.html">Sobre mi</a>
+                            <a class="nav-link menu-link" href="index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="secciones/servicios.html">Servicios</a>
+                            <a class="nav-link menu-link" href="./secciones/sobre-mi.html">Sobre Mi</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="secciones/contacto.html">Contacto</a>
+                            <a class="nav-link menu-link" href="./secciones/servicios.html">Servicios</a>
                         </li>
-
+                        <li class="nav-item">
+                            <a class="nav-link menu-link" href="./secciones/contacto.html">Contacto</a>
+                        </li>
                     </ul>
-
                 </div>
-
             </div>
-
         </nav>
-        
-
-
 
     </header>
+
 
 <!-- contenido principal -->
 
@@ -143,7 +138,6 @@
 
     <!-- bootstrap  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-
 
 
 </body>
