--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -17,31 +17,35 @@
     
 <!-- encabezado principal-->
 <header>
-        <nav class="navbar navbar-expand-lg bg-light px-4">
-            <div class="container justify-content-end">
-                <a class="navbar-brand" href="../index.html">
-                    <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegacion">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="mainNav">
-                    <ul class="navbar-nav align-items-lg-center">
+
+    <nav class="navbar navbar-expand-lg bg-light px-4">
+        <div class="container justify-content-end">
+            <a class="navbar-brand" href="../index.html">
+                <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegacion">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="mainNav">
+                <ul class="navbar-nav align-items-lg-center">
                         
-                        <li class="nav-item">
-                            <a class="nav-link menu-link" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu-link" href="sobre-mi.html">Sobre mi</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link menu-link" href="contacto.html">Contacto</a>
-                        </li>
-                    </ul>
-                </div>
+                    <li class="nav-item">
+                        <a class="nav-link menu-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menu-link" href="sobre-mi.html">Sobre Mi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menu-link" href="servicios.html">Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link menu-link" href="contacto.html">Contacto</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-    </header>
+        </div>
+    </nav>
+</header>
 
 <!-- contenido principal -->
     <main>
