--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -34,10 +34,13 @@
                             <a class="nav-link menu-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link menu-link" href="sobre-mi.html">Sobre mi</a>
+                            <a class="nav-link menu-link" href="sobre-mi.html">Sobre Mi</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link menu-link" href="servicios.html">Servicios</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link menu-link" href="contacto.html">Contacto</a>
                         </li>
                     </ul>
                 </div>
