--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -21,7 +21,7 @@
 <body>
 <!-- encabezado principal-->
     <header>
-        <nav class="navbar navbar-expand-lg bg-light px-4">
+                <nav class="navbar navbar-expand-lg bg-light px-4">
             <div class="container justify-content-end">
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
@@ -36,6 +36,9 @@
                             <a class="nav-link menu-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link menu-link" href="sobre-mi.html">Sobre Mi</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link menu-link" href="servicios.html">Servicios</a>
                         </li>
                         <li class="nav-item">
@@ -45,7 +48,8 @@
                 </div>
             </div>
         </nav>
-    </header>
+    </header>        
+
 
 <!-- contenido principal -->
     <main>
