modificando media queries

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 <!-- encabezado principal -->
 
     <header>
-        <nav class="navbar navbar-expand-lg bg-light px-4">
-            <div class="container justify-content-end">
+        <nav class="navbar navbar-expand-lg px-4">
+            <div class="container justify-content-between">
                 <a class="navbar-brand" href="index.html">
                     <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
                 </a>
@@ -69,7 +69,7 @@
         </section>
 
 <!-- informacion metodo de trabajo -->
-        <div>
+        <div class="lista">
             <h2>Método de trabajo</h2>
             <ul>
                 <li>Trabajamos en formato online para que puedas cuidarte desde cualquier lugar.</li>
@@ -79,7 +79,7 @@
                 <li>Entregamos materiales y actividades para reflexionar, integrar y avanzar sesión tras sesión.</li>
                 <li>Educación nutricional y emocional basada en la evidencia para cuidarte de forma respetuosa.</li>
                 <li>Resolución de dudas, mitos alimentarios y creencias limitantes sobre alimentación.</li>
-                <li>Enfoque psiconutricional no pesocentrista, sin dietas, sin juicios, desde el respeto, la flexibilidad, la escucha y el autocuidado.</li>
+                <li>Enfoque psiconutricional no pesocentrista, sin dietas, sin juicios, desde el respeto, la flexibilidad.</li>
             </ul>
         </div>
 
