--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -21,7 +21,7 @@
 <body>
 <!-- encabezado principal-->
     <header>
-                <nav class="navbar navbar-expand-lg bg-light px-4">
+        <nav class="navbar navbar-expand-lg px-4">
             <div class="container justify-content-end">
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
