arreglando media queries contacto

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -20,7 +20,7 @@
     <!-- encabezado principal-->
     <header>
         <nav class="navbar navbar-expand-lg px-4">
-            <div class="container justify-content-end">
+            <div class="container justify-content-between">
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
                 </a>
@@ -52,7 +52,7 @@
 <!-- contenido principal -->
     <main>
         <h2>Reserva tu cita</h2>
-        <h6>Contactame para mas informacion</h6>
+        <p>Contactame para mas informacion</p>
         <div class="contacto-container">
             <div class="contacto-card">
                 <form>
@@ -86,7 +86,7 @@
                 </form>
             </div>
             <div class="contacto-imagen">
-                <img src="../img/imagen-contacto.webp" alt="img-ceci-2">
+                <img src="../img/imagen-sobremi-3.png" alt="img-ceci-2">
             </div>
         </div>
     </main>
