--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -22,7 +22,7 @@
 <!-- encabezado principal-->
     <header>
         <nav class="navbar navbar-expand-lg px-4">
-            <div class="container justify-content-end">
+            <div class="container justify-content-between">
                 <a class="navbar-brand" href="../index.html">
                     <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
                 </a>
@@ -54,8 +54,8 @@
 <!-- contenido principal -->
     <main>
         <h2>Mi Historia Personal</h2>
-        <section class="section-uno">
-            <div class="contenedor-uno">
+        <section class="section-sobremi">
+            <div class="contenedor-sobremi">
                 <img src="../img/imagen-ceci1.jpg" alt="img-ceci-2">
                 <div class="texto">
                     <p>Desde siempre he sentido una gran pasión por la nutrición. Mi principal motivación ha sido ayudar a las personas a mejorar su salud y su calidad de vida, sin renunciar al placer de comer.</p>
@@ -67,8 +67,8 @@
             </div>
         </section>
         
-        <section class="section-dos">
-            <div class="contenedor-dos">
+        <section class="section-sobremi-dos">
+            <div class="contenedor-sobremi-dos">
                 <img src="../img/imagen-ceci2.jpg" alt="img-ceci-1">
                 <div class="texto-dos">
                     <p>De forma paralela, trabajo en proyectos educativos enfocados en fomentar hábitos de vida saludables entre la población infantil. Siempre he sentido un gran interés por la prevención, incluso más que por la curación, y poder enseñar a niños y niñas a cuidar de su salud desde pequeños es algo que me apasiona profundamente.</p>
