--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -19,7 +19,7 @@
 <header>
 
     <nav class="navbar navbar-expand-lg px-4">
-        <div class="container justify-content-end">
+        <div class="container justify-content-between">
             <a class="navbar-brand" href="../index.html">
                 <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
             </a>
