revisar para la ultima presentacion

--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -22,7 +22,7 @@
         <nav class="navbar navbar-expand-lg px-4">
             <div class="container justify-content-between">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
+                    <img src="../img/logo-ceci2.png" alt="logo-iris" height="80" width="150">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegacion">
                     <span class="navbar-toggler-icon"></span>
@@ -51,7 +51,7 @@
 
 <!-- contenido principal -->
     <main>
-        <h2>Reserva tu cita</h2>
+        <h1>Reserva tu cita</h1>
         <p>Contactame para mas informacion</p>
         <div class="contacto-container">
             <div class="contacto-card">
