--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -24,7 +24,7 @@
         <nav class="navbar navbar-expand-lg px-4">
             <div class="container justify-content-between">
                 <a class="navbar-brand" href="../index.html">
-                    <img src="../img/logo-iris.avif" alt="logo-iris" height="70">
+                    <img src="../img/logo-ceci2.png" alt="logo-iris" height="80" width="150">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false" aria-label="Alternar navegacion">
                     <span class="navbar-toggler-icon"></span>
@@ -53,7 +53,7 @@
 
 <!-- contenido principal -->
     <main>
-        <h2>Mi Historia Personal</h2>
+        <h1>Mi Historia Personal</h1>
         <section class="section-sobremi">
             <div class="contenedor-sobremi">
                 <img src="../img/imagen-ceci1.jpg" alt="img-ceci-2">
