--- a/index.html
+++ b/index.html
@@ -121,19 +121,14 @@
 
     <footer>
         <div class="redes">
-            <a href="https://www.instagram.com/nutri.ceciliasalva/">
-                <img src="img/Instagram_icon.png.webp" alt="instagram">
-            </a>
-
-            <a href="https://www.tiktok.com/@nutri.ceciliasalva">
-                <img src="img/tik-tok8.png" alt="tik-tok">
-            </a>
-
-            <a href="https://wa.me/603943487">
+            <a href="https://www.instagram.com/nutri.ceciliasalva">
+                <img src="img/Instagram_icon.png.webp"alt="instagram">
+            </a><a href="https://www.tiktok.com/@nutri.ceciliasalva">
+                <img src="img/tik-tok8.png"alt="tik-tok">
+            </a><a href="https://wa.me/603943487">
                 <img src="img/whatsapp-icon-free-png.webp" alt="whatsapp">
             </a>
         </div>
-        
     </footer>
 
     <!-- bootstrap  -->
