--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -21,6 +21,7 @@
 <body>
 <!-- encabezado principal-->
     <header>
+        <!-- menu hamburguesa con bootstrap -->
         <nav class="navbar navbar-expand-lg px-4">
             <div class="container justify-content-between">
                 <a class="navbar-brand" href="../index.html">
@@ -81,7 +82,7 @@
 
     </main>
 
-<!--pie de pagina  -->
+<!--pie de pagina redes sociales -->
     <footer>
 
         <div class="redes">
