mejorando la tarjeta de contacto

--- a/index.html
+++ b/index.html
@@ -91,9 +91,13 @@
                 <p>Terapia nutricional para la recuperación de los TCA, desde un enfoque no peso centrista, no basado en
                     dietas y reconcentrando con las señales del cuerpo de una manera respetuosa.</p>
                 <p>Anorexia, Bulimia, Trastorno por Atracón, Comedor Nocturno, etc.</p>
-                <button>
-                    <a class="nav-link" href="./secciones/contacto.html">Pedir cita</a>
-                </button>
+                <a href="./secciones/contacto.html">
+                    <button>
+                        <span class="transition"></span>
+                        <span class="gradient"></span>
+                        <span class="label">Pedir cita</span>
+                    </button>
+                </a>
             </div>
 
             <div class="card">
@@ -102,9 +106,13 @@
                     de mejorar tu salud de una manera integral y consciente.</p>
                 <p>Endometriosis, Amenorrea, SOP, Síndrome premenstrual, etc.</p>
                 <p>Acompañamiento integral para equilibrar tus hormonas y mejorar tu ciclo menstrual.</p>
-                <button>
-                    <a class="nav-link" href="./secciones/contacto.html">Pedir cita</a>
-                </button>
+                <a href="./secciones/contacto.html">
+                    <button>
+                        <span class="transition"></span>
+                        <span class="gradient"></span>
+                        <span class="label">Pedir cita</span>
+                    </button>
+                </a>
             </div>
 
             <div class="card">
@@ -113,10 +121,13 @@
                     estilo de vida, sin dolores ni malestares.</p>
                 <p>Patologías gastrointestinales, cardiovasculares, metabólicas, renales, etc.</p>
                 <p>También, ayudamos a realizar un cambio de hábitos para la prevención de futuras enfermedades.</p>
-                <button>
-                    <a class="nav-link" href="./secciones/contacto.html">Pedir cita</a>
-                </button>
-
+                <a href="./secciones/contacto.html">
+                    <button>
+                        <span class="transition"></span>
+                        <span class="gradient"></span>
+                        <span class="label">Pedir cita</span>
+                    </button>
+                </a>
             </div>
 
         </div>
@@ -128,8 +139,7 @@
         <div class="redes">
             <ul class="example-2">
                 <li class="icon-content">
-                    <a data-social="whatsapp" aria-label="Whatsapp"
-                        href="https://wa.me/603943487">
+                    <a data-social="whatsapp" aria-label="Whatsapp" href="https://wa.me/603943487">
                         <div class="filled"></div>
                         <svg xml:space="preserve" viewBox="0 0 24 24" class="bi bi-whatsapp" fill="currentColor"
                             height="24" width="24" xmlns="http://www.w3.org/2000/svg">
@@ -153,7 +163,8 @@
                     <div class="tooltip">Facebook</div>
                 </li>
                 <li class="icon-content">
-                    <a data-social="instagram" aria-label="Instagram" href="https://www.instagram.com/nutri.ceciliasalva/">
+                    <a data-social="instagram" aria-label="Instagram"
+                        href="https://www.instagram.com/nutri.ceciliasalva/">
                         <div class="filled"></div>
                         <svg xml:space="preserve" viewBox="0 0 16 16" class="bi bi-instagram" fill="currentColor"
                             height="16" width="16" xmlns="http://www.w3.org/2000/svg">
