creo haber finalizado todo

--- a/secciones/servicios.html
+++ b/secciones/servicios.html
@@ -4,15 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- estilos de boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
     <!-- estilos de css -->
     <link rel="stylesheet" href="../css/estilos.css">
+    
+    <!-- estilos de letras -->
+    <link
+        href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Momo+Signature&display=swap"
+        rel="stylesheet">
 
     <!-- titulo -->
-    <title>Servicios</title>
+    <title>Licenciada Cecilia Salva - Servicios</title>
 
 </head>
 
@@ -20,7 +26,6 @@
 
     <!-- encabezado principal-->
     <header>
-
         <nav class="navbar navbar-expand-lg px-4">
             <div class="container justify-content-between">
                 <a class="navbar-brand" href="../index.html">
@@ -32,7 +37,6 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="mainNav">
                     <ul class="navbar-nav align-items-lg-center">
-
                         <li class="nav-item">
                             <a class="nav-link menu-link" href="../index.html">Inicio</a>
                         </li>
@@ -55,12 +59,9 @@
     <main>
         <h1>Planes</h1>
         <div class="contenedor-servicios">
-
             <!-- primera tarjeta -->
             <div class="card-servicios">
-                <div>
-                    <h2>Primera evaluacion inicial</h2>
-                </div>
+                <h2>Primera evaluacion inicial</h2>
                 <div>
                     <p>Realizamos una primera llamada telefónica o videoconsulta para que nos comentes tu caso.</p>
                     <ul>
@@ -84,9 +85,7 @@
 
             <!-- segunda tarjeta  -->
             <div class="card-servicios">
-                <div>
-                    <h2>Sesión nutrición online 30 min</h2>
-                </div>
+                <h2>Sesión nutrición online 30 min</h2>
                 <div>
                     <p>Consulta de seguimiento y se realiza mediante videollamada.</p>
                     <ul>
@@ -111,9 +110,7 @@
 
             <!-- tercera tarjeta -->
             <div class="card-servicios">
-                <div>
-                    <h2>Sesión nutrición online 1 hora</h2>
-                </div>
+                <h2>Sesión nutrición online 1 hora</h2>
                 <div>
                     <p>Primera consulta nutricional o seguimiento adaptado a tu caso.<p>
                     <p>Se realiza mediante videollamada.</p>
@@ -140,9 +137,7 @@
 
             <!-- cuarta tarjeta -->
             <div class="card-servicios">
-                <div>
-                    <h2>Sesión nutrición familiar 1h20min</h2>
-                </div>
+                <h2>Sesión nutrición familiar 1h20min</h2>
                 <div>
                     <p>Consulta de nutrición con el paciente y algún familiar (padres, hijos) o pareja.</p>
                     <p> Y consulta de nutrición familiar para mejorar hábitos conjuntamente.</p>
@@ -217,7 +212,5 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-
 </body>
-
 </html>
