--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Plataforma global de nutrición que ofrece información confiable, recursos prácticos y recomendaciones basadas en evidencia para mejorar la salud y el bienestar a través de una alimentación equilibrada.">
+    <meta name="keywords" content="nutrición, salud, bienestar, alimentación equilibrada, clínica, deportiva">
+
+    <!-- titulo -->
+    <title>Licenciada Cecilia Salva</title>
+
 
     <!-- link de boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -16,15 +22,10 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Momo+Signature&display=swap"
         rel="stylesheet">
-
-    <!-- titulo -->
-    <title>Licenciada Cecilia Salva</title>
-
 </head>
 
 <body>
     <!-- encabezado principal -->
-
     <header>
         <nav class="navbar navbar-expand-lg px-4">
             <div class="container justify-content-between">
@@ -37,7 +38,6 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="mainNav">
                     <ul class="navbar-nav align-items-lg-center">
-
                         <li class="nav-item">
                             <a class="nav-link menu-link" href="index.html">Inicio</a>
                         </li>
@@ -54,21 +54,15 @@
                 </div>
             </div>
         </nav>
-
     </header>
 
-
     <!-- contenido principal -->
-
     <main>
         <h1>Nutricion Clinica y Deportiva</h1>
         <p>Alcanza tus metas, optimiza tu energía y disfruta del proceso.</p>
         <p>Porque comer bien no es una dieta, es un estilo de vida.</p>
 
-        <!-- logo de la pagina  -->
-
-
-        <!-- informacion metodo de trabajo -->
+        <!-- lista -->
         <div class="lista">
             <h2>Método de trabajo</h2>
             <ul>
@@ -99,7 +93,6 @@
                     </button>
                 </a>
             </div>
-
             <div class="card">
                 <h3>Salud Hormonal Femenina</h3>
                 <p>Consulta nutricional enfocada al bienestar de tu salud hormonal y ciclo menstrual. Con la finalidad
@@ -114,7 +107,6 @@
                     </button>
                 </a>
             </div>
-
             <div class="card">
                 <h3>Nutrición clínica</h3>
                 <p>Trabajamos para mejorar la salud desde la nutrición con la finalidad de poder aumentar la calidad del
@@ -129,12 +121,10 @@
                     </button>
                 </a>
             </div>
-
         </div>
     </main>
 
     <!--pie de pagina  -->
-
     <footer>
         <div class="redes">
             <ul class="example-2">
@@ -184,5 +174,4 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 </body>
-
 </html>
