--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <!-- estilos de boostrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -17,10 +18,9 @@
         rel="stylesheet">
 
     <!-- titulo -->
-    <title>Contacto</title>
+    <title>Licenciada Cecilia Salva - Contacto</title>
 
 </head>
-
 <body>
     <!-- encabezado principal-->
     <header>
@@ -35,7 +35,6 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-end" id="mainNav">
                     <ul class="navbar-nav align-items-lg-center">
-
                         <li class="nav-item">
                             <a class="nav-link menu-link" href="../index.html">Inicio</a>
                         </li>
@@ -54,7 +53,6 @@
         </nav>
     </header>
 
-
     <!-- contenido principal -->
     <main>
         <h1>Reserva tu cita</h1>
@@ -64,30 +62,23 @@
             <div class="form-card2">
                 <form class="form">
                     <p class="form-heading">Contacto</p>
-
                     <div class="form-field">
                         <input required="" placeholder="Nombre completo" class="input-field" type="text" />
                     </div>
-
                     <div class="form-field">
                         <input required="" placeholder="Correo electrónico" class="input-field" type="email" />
                     </div>
-
                     <div class="form-field">
                         <input required="" placeholder="Asunto" class="input-field" type="text" />
                     </div>
-
                     <div class="form-field">
                         <textarea required="" placeholder="Mensaje" cols="30" rows="3" class="input-field"></textarea>
                     </div>
-
                     <button class="sendMessage-btn">Enviar mensaje</button>
                 </form>
             </div>
         </div>
-
     </main>
-
 
     <!--pie de pagina  -->
     <footer>
@@ -138,7 +129,5 @@
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
 
-
 </body>
-
 </html>
