--- a/secciones/sobre-mi.html
+++ b/secciones/sobre-mi.html
@@ -11,11 +11,10 @@
     <link rel="stylesheet" href="../css/estilos.css">
 
     <!-- estilos de letras -->
-
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Momo+Signature&display=swap" rel="stylesheet">
 
     <!-- titulo -->
-    <title>Sobre Mi</title>
+    <title>Licenciada Cecilia Salva - Sobre Mi</title>
 
 </head>
 <body>
@@ -50,7 +49,6 @@
             </div>
         </nav>
     </header>        
-
 
 <!-- contenido principal -->
     <main>
